Issue Fixed (Regarding Slider Overlapping)

--- a/packages/Webkul/Velocity/src/Resources/assets/sass/app.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/app.scss
@@ -1100,10 +1100,6 @@ i.within-circle {
         -webkit-appearance: none
     }
 
-    .main-content-wrapper .vc-header {
-        position: fixed;
-    }
-
     .nav-container {
         top: 7%;
         left: 0px;
